<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>lloysabankinggroup</groupId>
    <artifactId>LloydsbankWebsite</artifactId>
    <version>1.0-SNAPSHOT</version>

        <properties>
            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
            <selenium.version>3.13.0</selenium.version>
            <spring.framework.version>4.2.6.RELEASE</spring.framework.version>
            <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
            <maven.compiler.source>1.8</maven.compiler.source>
            <maven.compiler.target>1.8</maven.compiler.target>

            <cucumber.version>3.0.0-SNAPSHOT</cucumber.version>

            <!--<cucumber.version>3.0.2</cucumber.version>-->

            <junit.version>4.13.1</junit.version>
        </properties>
<!--        <repositories>-->
<!--            <repository>-->
<!--                <id>central</id>-->
<!--                <url>https://nexus.cobl.zone/repository/maven/</url>-->
<!--                <snapshots>-->
<!--                    <enabled>true</enabled>-->
<!--                    <updatePolicy>always</updatePolicy>-->
<!--                </snapshots>-->
<!--                <releases>-->
<!--                    <enabled>true</enabled>-->
<!--                    <updatePolicy>always</updatePolicy>-->
<!--                </releases>-->
<!--            </repository>-->
<!--        </repositories>-->
<!--        <pluginRepositories>-->
<!--            <pluginRepository>-->
<!--                <id>central</id>-->
<!--                <url>https://nexus.cobl.zone/repository/maven/</url>-->
<!--                <snapshots>-->
<!--                    <enabled>true</enabled>-->
<!--                    <updatePolicy>always</updatePolicy>-->
<!--                </snapshots>-->
<!--                <releases>-->
<!--                    <enabled>true</enabled>-->
<!--                    <updatePolicy>always</updatePolicy>-->
<!--                </releases>-->
<!--            </pluginRepository>-->
<!--        </pluginRepositories>-->
        <dependencies>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-server</artifactId>
                <version>${selenium.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.framework.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.framework.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.framework.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>3.13.0</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.25</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>1</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-spring</artifactId>
                <version>${cucumber.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java</artifactId>
                <version>${cucumber.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-junit</artifactId>
                <version>${cucumber.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>net.masterthought</groupId>
                <artifactId>cucumber-reporting</artifactId>
                <version>3.18.0</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
            <dependency>
                <groupId>com.jayway.restassured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>2.9.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>2.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>1.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
            <dependency>
                <groupId>com.googlecode.json-simple</groupId>
                <artifactId>json-simple</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.11.3</version>
            </dependency>
            <dependency>
                <groupId>javax.json</groupId>
                <artifactId>javax.json-api</artifactId>
                <version>1.1.2</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.json</artifactId>
                <version>1.1.2</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>4.1.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>4.1.0</version>
            </dependency>

            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>2.0.11</version>
            </dependency>
            <dependency>
                <groupId>de.redsix</groupId>
                <artifactId>pdfcompare</artifactId>
                <version>1.1.40</version>
            </dependency>
            <dependency>
                <groupId>xmlunit</groupId>
                <artifactId>xmlunit</artifactId>
                <version>1.6</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>de.redsix</groupId>
                <artifactId>pdfcompare</artifactId>
                <version>1.1.40</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
        <profiles>
            <profile>
                <id>test</id>
                <activation>
                    <activeByDefault>true</activeByDefault>
                </activation>
                <build>
                    <defaultGoal>install</defaultGoal>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.7.0</version>
                            <configuration>
                                <source>${maven.compiler.source}</source>
                                <target>${maven.compiler.target}</target>
                                <encoding>UTF-8</encoding>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <version>2.22.0</version>
                            <executions>
                                <execution>
                                    <goals>
                                        <goal>integration-test</goal>
                                        <!--<goal>verify</goal>-->
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <argLine>-Duser.language=en</argLine>
                                <argLine>-Xmx1024m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                                <argLine>-Dfile.encoding=UTF-8</argLine>
                                <useFile>false</useFile>
                                <includes>
                                    <include>**/*Runner*.class</include>
                                </includes>
                                <systemPropertyVariables>
                                    <env>test</env>
                                    <hub>https://selenium-hub.cobl.zone/wd/hub</hub>
                                    <remote>false</remote>
                                    <!--<CaseInitiation>${caseInitiation}</CaseInitiation>-->
                                </systemPropertyVariables>
                            </configuration>
                        </plugin>
                    </plugins>
                </build>
            </profile>
            <profile>
                <id>remote</id>
                <activation>
                    <activeByDefault>false</activeByDefault>
                </activation>
                <build>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.7.0</version>
                            <configuration>
                                <source>${maven.compiler.source}</source>
                                <target>${maven.compiler.target}</target>
                                <encoding>UTF-8</encoding>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <version>2.22.0</version>
                            <executions>
                                <execution>
                                    <goals>
                                        <goal>integration-test</goal>
                                        <!--<goal>verify</goal>-->
                                    </goals>
                                    <configuration>
                                        <forkCount>15</forkCount>
                                        <reuseForks>true</reuseForks>
                                        <includes>
                                            <include>**/*IT.class</include>
                                        </includes>
                                    </configuration>
                                </execution>
                            </executions>
                            <configuration>
                                <argLine>-Duser.language=en</argLine>
                                <argLine>-Xmx1024m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                                <argLine>-Dfile.encoding=UTF-8</argLine>
                                <useFile>false</useFile>
                                <includes>
                                    <include>**/*Runner*.class</include>
                                </includes>
                                <systemPropertyVariables>
                                    <env>test</env>
                                    <hub>https://selenium-hub.cobl.zone/wd/hub</hub>
                                    <!--<CaseInitiation>${caseInitiation}</CaseInitiation>-->
                                    <remote>true</remote>
                                </systemPropertyVariables>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>net.masterthought</groupId>
                            <artifactId>maven-cucumber-reporting</artifactId>
                            <version>3.12.0</version>
                            <executions>
                                <execution>
                                    <id>execution</id>
                                    <phase>verify</phase>
                                    <goals>
                                        <goal>generate</goal>
                                    </goals>
                                    <configuration>
                                        <projectName>LVS Colleague Journey</projectName>
                                        <outputDirectory>${project.build.directory}/cucumber-html-reports</outputDirectory>
                                        <cucumberOutput>${project.build.directory}/cucumber-parallel</cucumberOutput>
                                        <parallelTesting>true</parallelTesting>
                                        <buildNumber>8.4.1.2</buildNumber>
                                        <checkBuildResult>false</checkBuildResult>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>2.19.1</version>
                            <configuration>
                                <testFailureIgnore>true</testFailureIgnore>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>com.github.temyers</groupId>
                            <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                            <version>5.0.0</version>
                            <executions>
                                <execution>
                                    <id>genereateRunners</id>
                                    <phase>generate-test-sources</phase>
                                    <goals>
                                        <goal>generateRunners</goal>
                                    </goals>
                                    <configuration>
                                        <glue>
                                            <package>
                                                com.pega.selenium.tests
                                            </package>
                                        </glue>
                                        <outputDirectory>target/generated-test-sources/cucumber</outputDirectory>
                                        <featuresDirectory>src/test/resources/com/pega/selenium/features/UITest</featuresDirectory>
                                        <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
                                        <namingPattern>Parallel{c}IT</namingPattern>
                                        <plugins>
                                            <plugin>
                                                <name>json</name>
                                            </plugin>
                                            <plugin>
                                                <name>html</name>
                                            </plugin>
                                            <plugin>
                                                <name>junit</name>
                                            </plugin>
                                        </plugins>
                                        <parallelScheme>FEATURE</parallelScheme>
                                        <!--<tags>@login</tags>-->
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </build>
            </profile>
        </profiles>
    </project>